--- a/front-end/css/geral.css
+++ b/front-end/css/geral.css
@@ -56,7 +56,7 @@ a:hover , li:hover a{
 }
 
 .img {
-  width: 100%;
+  min-width: 100%;
 }
 
 .medium-size {
@@ -142,10 +142,10 @@ hr {
   text-decoration: none;
 }
 
-picture p {
+/* picture p {
   border-left: 5px solid rgba(128, 128, 128, 0.4);
   font-size: 1rem;
-}
+} */
 
 @media only screen and (min-width: 768px) {
   .mansory-item {
