--- a/front-end/css/home.css
+++ b/front-end/css/home.css
@@ -1,6 +1,6 @@
 /* Todas as seções */
 .container {
-  max-width: 900px;
+  max-width: 1000px;
   padding: 2em 2em;
   margin: 0 auto;
   border-bottom: 1.5px solid white;
@@ -14,7 +14,7 @@ section:last-child .container {
 
 .container-apresentacao {
   background-color: rgba(0, 0, 0, 0.8);
-  background-image: url("..\\assets\\imagens\\web-development-banner.png");
+  background-image: url("/assets/imagens/web-development-banner.png");
   background-size: cover;
   background-blend-mode: multiply;
   background-repeat: no-repeat;
@@ -97,11 +97,26 @@ section:last-child .container {
 
 /* Trabalhos Section */
 
+.trabalho-item {
+    width: 250px;
+    margin: 1rem;
+}
+
+.img-portrait {
+    height: 200px;
+    overflow-y: hidden;
+}
+
+.img-portrait + p {
+    border-left: 5px solid rgba(128, 128, 128, 0.4);
+    font-size: 1rem;
+}
+
 /* Entre em Contato Section */
 
 .container-contato {
   background-color: rgba(0, 0, 0, 0.8);
-  background-image: url("..\\assets\\imagens\\contato-banner.png");
+  background-image: url("/assets/imagens/contato-banner.png");
   background-size: cover;
   background-blend-mode: multiply;
   background-repeat: no-repeat;
