--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -3,3 +3,6 @@
 @import "geral.css";
 @import "header.css";
 @import "footer.css";
+@import "home.css";
+@import "contato.css";
+@import "trabalhos.css";
