--- a/front-end/css/contato.css
+++ b/front-end/css/contato.css
@@ -1,7 +1,7 @@
 .container-formulario{
     margin: auto;
 }
-.formulario input{
+.formulario input, .formulario button[type='submit']{
     display: block;
     width:100%;
     line-height: 2em;
@@ -14,7 +14,7 @@ input:focus, textarea:focus{
     outline-color: var(--corFocus);
 }
 
-.formulario input[type="submit"]{
+.formulario button[type="submit"]{
     max-width: 200px;
     margin-top: 1em;
 }
