--- a/front-end/css/header.css
+++ b/front-end/css/header.css
@@ -4,8 +4,8 @@
     background-color: var(--corFundoCabecalho);
     border-top: 1.3px solid var(--corDaBorda);
     width: 100%;
-    padding: 0.4em 0.7em;
-    height: 8vh;
+    padding: 0 16px 0 16px;
+    height: 10vh;
     display: grid;
     justify-items: center;
     align-items: center;
