--- a/front-end/css/home.css
+++ b/front-end/css/home.css
@@ -44,7 +44,8 @@ section:last-child .container {
 }
 
 .container-apresentacao h1 {
-    text-align: start;
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 .areas-trabalho ul {
@@ -92,6 +93,7 @@ section:last-child .container {
   }
   .container-apresentacao h1 {
     grid-area: h1;
+    text-align: start;
   }
 
   .buttons {
