--- a/fullphp/resources/views/templates/home/footer.html.twig
+++ b/fullphp/resources/views/templates/home/footer.html.twig
@@ -11,12 +11,12 @@
         <ul class='w-full flex flex-wrap gap-4 justify-center items-center'>
             <li>
                 <a href="https://github.com/diegomatos321" target="_blank">
-                    {{ include('templates/icons/fa-github.svg') }}
+                    <div style="width: 2rem;">{{ include('templates/icons/fa-github.svg') }}</div>
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/dev-diego-matos/" target="_blank">
-                    {{ include('templates/icons/fa-linkedin.svg') }}
+                    <div style="width: 2rem;">{{ include('templates/icons/fa-linkedin.svg') }}</div>
                 </a>
             </li>
         </ul>
