Ajustando design da tela de apresentação

--- a/fullphp/resources/views/templates/home/apresentacao.html.twig
+++ b/fullphp/resources/views/templates/home/apresentacao.html.twig
@@ -1,13 +1,13 @@
 <section class="bg-[#00AFEF]">
-    <div class="container mx-auto relative grid grid-cols-1 sm:grid-cols-2 justify-items-center items-center">
-        <header style="max-width: 450px" class="relative text-white text-center space-y-4 sm:justify-self-end sm:text-right">
-        <h1 class="text-5xl mr-0"><strong>Prazer, eu sou Diego</strong></h1>
-        <p class="text-left sm:text-right">Bacharelando em Ciência da Computação na Universidade Federal do Rio de Janeiro e um entusiasta por jogos, trabalho com desenvolvimento de sites, aplicativos e jogos.</p>
-        </header>
-
-        <picture class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 opacity-30 sm:relative sm:top-0 sm:left-0 sm:-translate-x-0 sm:-translate-y-0 sm:opacity-100 sm:block sm:justify-self-start">
+    <div class="container mx-auto relative flex justify-center items-center">
+        <picture class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 opacity-30 sm:relative sm:top-0 sm:left-0 sm:-translate-x-0 sm:-translate-y-0 sm:opacity-100">
             <source srcSet="/assets/marca/logo-monocromatica-branca-300x300.webp" />
             <img style="max-width: 300px" class="w-full" src="/assets/marca/logo-monocromatica-branca-300x300.png" alt="Marca" />
         </picture>
+        
+        <header style="max-width: 450px" class="relative text-white space-y-4 p-4 sm:p-0">
+            <h1 class="text-5xl mr-0"><strong>Prazer, eu sou Diego</strong></h1>
+            <p>Bacharelando em Ciência da Computação na Universidade Federal do Rio de Janeiro, minhas áreas de interesse são Desenvolvimento de Software e Computação Gráfica. Atualmente trabalho com desenvolvimento de sites, aplicativos e jogos.</p>
+        </header>
     </div>
 </section>
