--- a/fullphp/resources/views/templates/home/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/home/trabalhos.html.twig
@@ -4,7 +4,7 @@
             <h2 class="text-4xl"><strong>Meus projetos</strong></h2>
         </header>
 
-        <ul class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+        <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
                     'href': 'https://www.preparavestibular.com.br',
