--- a/fullphp/resources/views/templates/home/footer.html.twig
+++ b/fullphp/resources/views/templates/home/footer.html.twig
@@ -1,9 +1,10 @@
-<footer class='bg-[#00AFEF] text-white'>
+<footer class='bg-[#00AFEF] text-white sm:hidden'>
     <div class="container mx-auto p-4 ">
         <a href="https://www.devdiegomatos.com.br">
             <img
                 style="max-width: 450px;"
                 src="/assets/marca/logo-horizontal-monocromatica-450x450.png"
+                title="Marca horizontal Desenvolvedor Diego Matos"
                 alt="Marca horizontal Desenvolvedor Diego Matos"
                 class='mx-auto w-full'
             />
