--- a/fullphp/resources/views/templates/trabalho-card.html.twig
+++ b/fullphp/resources/views/templates/trabalho-card.html.twig
@@ -1,6 +1,6 @@
 <a href="{{ href }}" target="_blank">
     <div class="shadow-lg p-4 space-y-2 h-full transition-transform hover:-translate-y-4">
-        <img class="w-full" src="{{ imgSrc }}" title="{{ imgAlt }}" alt="{{ imgAlt }}" />
+        <img class="object-contain w-full sm:h-[200px]" src="{{ imgSrc }}" title="{{ imgAlt }}" alt="{{ imgAlt }}" />
 
         <h3 class="text-2xl"><strong>{{ title }}</strong></h3>
 
