Campo de formulário funcionando

--- a/fullphp/resources/views/404.html.twig
+++ b/fullphp/resources/views/404.html.twig
@@ -8,6 +8,6 @@
     <title>Diego Matos | Desenvolvedor de Software</title>
 </head>
 <body>
-    <h1>Método não encontrado</h1>
+    <h1>Erro 404 - Página não existe</h1>
 </body>
 </html>
