--- a/fullphp/resources/views/templates/home/apresentacao.html.twig
+++ b/fullphp/resources/views/templates/home/apresentacao.html.twig
@@ -7,7 +7,8 @@
         
         <header style="max-width: 450px" class="relative text-white space-y-4 p-4 md:p-0">
             <h1 class="text-5xl mr-0"><strong>Prazer, eu sou Diego</strong></h1>
-            <p>Bacharelando em Ciência da Computação na Universidade Federal do Rio de Janeiro, minhas áreas de interesse são Desenvolvimento de Software e Computação Gráfica. Atualmente trabalho com desenvolvimento de sites, aplicativos e jogos.</p>
+            <p>Bacharelando em Ciência da Computação na Universidade Federal do Rio de Janeiro, minhas áreas de interesse são Desenvolvimento de Software e Computação Gráfica.</p>
+            <p>Trabalho com desenvolvimento de sites, aplicativos e jogos.</p>
         </header>
     </div>
 </section>
