Url da página deve ser lida pela variavel de ambiente

--- a/fullphp/resources/views/templates/home/contato.html.twig
+++ b/fullphp/resources/views/templates/home/contato.html.twig
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="hidden sm:block">
-                    <a href="https://www.devdiegomatos.com.br">
+                    <a href="{{ env.APP_URL }}">
                         <img
                             style="max-width: 450px;"
                             src="/assets/marca/logo-horizontal-monocromatica-450x450.png"
