--- a/fullphp/resources/views/templates/home/footer.html.twig
+++ b/fullphp/resources/views/templates/home/footer.html.twig
@@ -1,6 +1,6 @@
 <footer class='bg-[#00AFEF] text-white sm:hidden'>
     <div class="container mx-auto p-4 ">
-        <a href="https://www.devdiegomatos.com.br">
+        <a href="{{ env.APP_URL }}">
             <img
                 style="max-width: 450px;"
                 src="/assets/marca/logo-horizontal-monocromatica-450x450.png"
