--- a/fullphp/resources/views/templates/home/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/home/trabalhos.html.twig
@@ -9,7 +9,7 @@
                 {% embed '/templates/trabalho-card.html.twig' with {
                     'href': 'https://www.preparavestibular.com.br',
                     'title': 'Prepara Vestibular',
-                    'imgSrc': '/assets/imagens/Prepara Vestibular - Assinatura Principal - Fundo Transparente_300_130.png',
+                    'imgSrc': '/assets/imagens/Prepara Vestibular - Assinatura Principal - Fundo Transparente_300_130',
                     'imgAlt': 'Marca do Prepara Vestibular'
                 } only %}
                     {% block content %}
@@ -21,7 +21,7 @@
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
                     'title': 'Cuidado e Afeto',
-                    'imgSrc': '/assets/imagens/logo-cuidado-e-afeto.png',
+                    'imgSrc': '/assets/imagens/logo-cuidado-e-afeto_300_224',
                     'imgAlt': 'Marca do Cuidado e Afeto'
                 } only %}
                     {% block content %}
@@ -34,7 +34,7 @@
                 {% embed '/templates/trabalho-card.html.twig' with {
                     'href': 'https://diegomatos321.github.io/escola-mozilla-verso/',
                     'title': 'Minijogos Educativos',
-                    'imgSrc': '/assets/imagens/minijogos-imagem-principal_300_169.png',
+                    'imgSrc': '/assets/imagens/minijogos-imagem-principal_300_169',
                     'imgAlt': 'Minijogos Imagem principal'
                 } only %}
                     {% block content %}
@@ -47,7 +47,7 @@
                 {% embed '/templates/trabalho-card.html.twig' with {
                     'href': 'https://www.estudioz.art.br/',
                     'title': 'EstudioZ',
-                    'imgSrc': '/assets/imagens/landing-page-estudio-z.png',
+                    'imgSrc': '/assets/imagens/landing-page-estudio-z',
                     'imgAlt': 'Marca EstudioZ'
                 } only %}
                     {% block content %}
