--- a/fullphp/resources/views/templates/trabalho-card.html.twig
+++ b/fullphp/resources/views/templates/trabalho-card.html.twig
@@ -1,6 +1,9 @@
 <a href="{{ href }}" target="_blank">
     <div class="shadow-lg p-4 space-y-2 h-full transition-transform hover:-translate-y-4">
-        <img class="object-contain w-full sm:h-[200px]" src="{{ imgSrc }}" title="{{ imgAlt }}" alt="{{ imgAlt }}" />
+        <picture>
+            <source srcset="{{ imgSrc }}.webp" type="image/webp">
+            <img class="object-contain w-full sm:h-[200px]" src="{{ imgSrc }}.png" title="{{ imgAlt }}" alt="{{ imgAlt }}" />
+        </picture>
 
         <h3 class="text-2xl"><strong>{{ title }}</strong></h3>
 
