--- a/fullphp/resources/views/templates/home/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/home/trabalhos.html.twig
@@ -4,55 +4,68 @@
             <h2 class="text-4xl"><strong>Meus projetos</strong></h2>
         </header>
 
-        <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+        <ul class="space-y-8">
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'href': 'https://www.preparavestibular.com.br',
+                    'videoSrc': '/assets/videos/demonstracao-implementacao-telas-finais.mp4',
                     'title': 'Prepara Vestibular',
-                    'imgSrc': '/assets/imagens/Prepara Vestibular - Assinatura Principal - Fundo Transparente_300_130',
-                    'imgAlt': 'Marca do Prepara Vestibular'
+                    'backgroundImg': '/assets/imagens/Prepara Vestibular - Assinatura Principal - Fundo Transparente_300_130',
+                    'backgroundImgAlt': 'Marca do Prepara Vestibular'
                 } only %}
                     {% block content %}
-                        <p>Plataforma gratuita de resolução de questões e simulados para o vestibular.</p>
+                        <p>Plataforma gratuita de resolução de questões e simulados para o vestibular. <a class="underline text-blue-600" href="https://www.preparavestibular.com.br">Acesse já!</a></p>
                     {% endblock %}
+
+                    {% block status %}<span class="text-green-600">Em produção</span>{% endblock %}
+                    {% block tempo %}Jan/2023 - Atual{% endblock %}
                 {% endembed %}
             </li>
 
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
+                    'videoSrc': '/assets/videos/demonstracao-implementacao-telas-finais.mp4',
                     'title': 'Cuidado e Afeto',
-                    'imgSrc': '/assets/imagens/logo-cuidado-e-afeto_300_224',
-                    'imgAlt': 'Marca do Cuidado e Afeto'
+                    'backgroundImg': '/assets/imagens/logo-cuidado-e-afeto_300_224',
+                    'backgroundImgAlt': 'Marca do Cuidado e Afeto'
                 } only %}
                     {% block content %}
-                        <p>Plataforma de Cuidadores Pessoais no Rio de Janeiro</p>
+                        <p>Plataforma de Cuidadores Pessoais no Rio de Janeiro.</p>
                     {% endblock %}
+
+                    {% block status %}<span class="text-red-600">Suspenso pelo cliente</span>{% endblock %}
+                    {% block tempo %}Jan/2022 - Jun/2022{% endblock %}
                 {% endembed %}
             </li>
 
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'href': 'https://diegomatos321.github.io/escola-mozilla-verso/',
+                    'videoSrc': '/assets/videos/demonstracao-minijogos-educativos.mp4',
                     'title': 'Minijogos Educativos',
-                    'imgSrc': '/assets/imagens/minijogos-imagem-principal_300_169',
-                    'imgAlt': 'Minijogos Imagem principal'
+                    'backgroundImg': '/assets/imagens/minijogos-imagem-principal_300_169',
+                    'backgroundImgAlt': 'Minijogos Educativos imagem principal.'
                 } only %}
                     {% block content %}
-                        <p>Plataforma gratuita de resolução de questões e simulados para o vestibular.</p>
+                        <p>Coletânea de minijogos encomendados por uma escola. <a class="underline text-blue-600" href="">Acessa já!</a></p>
                     {% endblock %}
+
+                    {% block status %}<span class="text-green-600">Entregue</span>{% endblock %}
+                    {% block tempo %}Mar/2022 - Mai/2022{% endblock %}
                 {% endembed %}
             </li>
 
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'href': 'https://www.estudioz.art.br/',
-                    'title': 'EstudioZ',
-                    'imgSrc': '/assets/imagens/landing-page-estudio-z',
-                    'imgAlt': 'Marca EstudioZ'
+                    'videoSrc': '/assets/videos/demonstracao-implementacao-telas-finais.mp4',
+                    'title': 'LandingPage para o EstudioZ',
+                    'backgroundImg': '/assets/imagens/landing-page-estudio-z',
+                    'backgroundImgAlt': 'Marca do EstudioZ.'
                 } only %}
                     {% block content %}
-                        <p>Landing page para estudio Artístico do Rio de Janeiro.</p>
+                        <p>Landing page para estudio Artístico do Rio de Janeiro. <a class="underline text-blue-600" href="https://www.estudioz.art.br/">Acessa já!</a></p>
                     {% endblock %}
+
+                    {% block status %}<span class="text-green-600">Entregue</span>{% endblock %}
+                    {% block tempo %}Set/2022{% endblock %}
                 {% endembed %}
             </li>
         </ul>
