--- a/fullphp/resources/views/templates/trabalho-card.html.twig
+++ b/fullphp/resources/views/templates/trabalho-card.html.twig
@@ -1,35 +1,26 @@
-<div class="grid grid-cols-1 sm:grid-cols-2 shadow-lg">
-    <video-js
-        class="video-js"
-        controls
-        width="1024"
-        height="576"
-        data-setup='{"aspectRatio": "16:9"}'
-    >
-        <source src="{{ videoSrc }}" type="video/mp4" />
+<div class="h-full shadow-lg flex flex-col justify-between">
+    <div>
+        <h3 class="text-2xl"><strong>{{ title }}</strong></h3>
 
-        <p class="vjs-no-js">Para assistir este vídeo ative o Javascript e considere usar um navegador mais moderno.</p>
-    </video-js>
+        <video-js
+                class="video-js"
+                controls
+                width="1024"
+                height="576"
+                data-setup='{"aspectRatio": "16:9"}'
+        >
+            <source src="{{ videoSrc }}" type="video/mp4" />
 
-    <div class="relative">
-        <picture>
-            <source srcset="{{ backgroundImg }}.webp" type="image/webp">
-            <img class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 object-contain opacity-20 pointer-events-none" src="{{ backgroundImg }}.png" title="{{ backgroundImgAlt }}" alt="{{ backgroundImgAlt }}" />
-        </picture>
+            <p class="vjs-no-js">Para assistir este vídeo ative o Javascript e considere usar um navegador mais moderno.</p>
+        </video-js>
+    </div>
 
-        <div class="p-4 h-full flex flex-col justify-between">
-            <div style="max-height: 100%;">
-                <h3 class="text-2xl"><strong>{{ title }}</strong></h3>
+    <div class="px-4 py-4 text-justify">
+        {% block content %}{% endblock %}
+    </div>
 
-                <div class="overflow-auto text-justify">
-                    {% block content %}{% endblock %}
-                </div>
-            </div>
-
-            <div class="flex flex-wrap gap-4">
-                <p>Status: {% block status %}{% endblock %}</p>
-                <p>Tempo: {% block tempo %}{% endblock %}</p>
-            </div>
-        </div>
+    <div class="px-4 pb-4 flex flex-wrap gap-4">
+        <p>Status: {% block status %}{% endblock %}</p>
+        <p>Tempo: {% block tempo %}{% endblock %}</p>
     </div>
 </div>
