Basta nomes de arquivo e suporte a thumbnail

--- a/fullphp/resources/views/templates/home/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/home/trabalhos.html.twig
@@ -7,10 +7,8 @@
         <ul class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-4 gap-4">
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'videoSrc': '/assets/videos/demonstracao-implementacao-telas-finais.mp4',
+                    'videoSrc': 'demonstracao-implementacao-telas-finais.mp4',
                     'title': 'Prepara Vestibular',
-                    'backgroundImg': '/assets/imagens/Prepara Vestibular - Assinatura Principal - Fundo Transparente_300_130',
-                    'backgroundImgAlt': 'Marca do Prepara Vestibular'
                 } only %}
                     {% block content %}
                         <p>Plataforma gratuita de resolução de questões e simulados para o vestibular. <a class="underline text-blue-600" href="https://www.preparavestibular.com.br">Acesse já!</a></p>
@@ -23,10 +21,8 @@
 
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'videoSrc': '/assets/videos/demonstracao-implementacao-telas-finais.mp4',
+                    'videoSrc': 'demonstracao-implementacao-telas-finais.mp4',
                     'title': 'Cuidado e Afeto',
-                    'backgroundImg': '/assets/imagens/logo-cuidado-e-afeto_300_224',
-                    'backgroundImgAlt': 'Marca do Cuidado e Afeto'
                 } only %}
                     {% block content %}
                         <p>Plataforma de Cuidadores Pessoais no Rio de Janeiro.</p>
@@ -39,10 +35,9 @@
 
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'videoSrc': '/assets/videos/demonstracao-minijogos-educativos.mp4',
+                    'videoSrc': 'demonstracao-minijogos-educativos.mp4',
                     'title': 'Minijogos Educativos',
-                    'backgroundImg': '/assets/imagens/minijogos-imagem-principal_300_169',
-                    'backgroundImgAlt': 'Minijogos Educativos imagem principal.'
+                    'thumbnail': 'minijogos-educativos.jpg'
                 } only %}
                     {% block content %}
                         <p>Coletânea de minijogos encomendados por uma escola. <a class="underline text-blue-600" href="">Acessa já!</a></p>
@@ -55,10 +50,8 @@
 
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'videoSrc': '/assets/videos/demonstracao-implementacao-telas-finais.mp4',
+                    'videoSrc': 'demonstracao-implementacao-telas-finais.mp4',
                     'title': 'LandingPage para o EstudioZ',
-                    'backgroundImg': '/assets/imagens/landing-page-estudio-z',
-                    'backgroundImgAlt': 'Marca do EstudioZ.'
                 } only %}
                     {% block content %}
                         <p>Landing page para estudio Artístico do Rio de Janeiro. <a class="underline text-blue-600" href="https://www.estudioz.art.br/">Acessa já!</a></p>
