Adicioando referencia correta para vídeo \ Atributos do videojs

--- a/fullphp/resources/views/templates/home/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/home/trabalhos.html.twig
@@ -50,7 +50,7 @@
 
             <li>
                 {% embed '/templates/trabalho-card.html.twig' with {
-                    'videoSrc': 'demonstracao-implementacao-telas-finais.mp4',
+                    'videoSrc': 'demonstracao-estudioz.mp4',
                     'title': 'LandingPage para o EstudioZ',
                 } only %}
                     {% block content %}
